Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,13 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'bob'\n"
+    "name = 'bob'"
    ]
   },
   {
