Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,11 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "name = 'bob'"
+    "name = \"bob\"\n"
    ]
   },
   {
