Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -163,11 +163,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'bob'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "name = \"bob\"\n"
+    "name = \"bob\"\n",
+    "name"
    ]
   },
   {
